name:              igreque-info-hakyll
version:           0.0.0
license:           MIT
license-file:      LICENSE
author:            YAMAMOTO Yuji
maintainer:        YAMAMOTO Yuji <whosekiteneverfly@gmail.com>
synopsis:          My blog generator powered by hakyll.
description:       My blog generator powered by hakyll.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://the.igreque.info/

source-repository head
  type: git
  location: https://github.com/igrep/igreque.info.git

executable hakyll
  buildable: True
  ghc-options: -Wall
  main-is: hakyll.hs

  build-depends:
      base >= 4.0
    , Cabal >= 1.18
    , hakyll >= 4.0
